[package]
name = "taro_shop_rust"
version = "0.1.0"
authors = ["summersnake"]
edition = "2021"

[dependencies]
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.20.1", features = ["full"] }
axum = { version = "0.5.13" }
serde = { version = "1.0.142", features = ["derive"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.3.4", features = ["add-extension", "trace"] }
dotenv = "0.15.0"
