[package]
name = "taro_shop_rust"
version = "0.1.0"
authors = ["summersnake"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.60", default-features = false }
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.20.1", features = ["full"] }
axum = { version = "0.5.13" }
serde = { version = "1.0.142", features = ["derive"] }
dotenv = "0.15.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
