[package]
name = "taro_shop_rust"
version = "0.1.0"
authors = ["summersnake"]
edition = "2021"

[dependencies]
anyhow = "1.0.60"
thiserror = "1.0.36"
sqlx = { version = "0.6.1", features = [
  "runtime-tokio-rustls",
  "mysql",
  "decimal",
  "chrono",
] }
tokio = { version = "1.20.1", features = ["full"] }
axum = { version = "0.5.13" }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.85"
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
rust_decimal = "1.26.1"
once_cell = "1.15.0"
